Create test for controllers